--- a/Final Documentation/Design/Design.tex
+++ b/Final Documentation/Design/Design.tex
@@ -1,5 +1,5 @@
 \section{Design and Implementation}\label{sec:design}
-In this chapter, I am going to describe the design and implementation steps realized for the demonstrator. Section \ref{subsec:exampleforimplementation} describes all the examples that I have conceptualized before choosing the final one for the implementation. This is then followed by the description of the steps taken for selecting the bx-tool in Section \ref{subsec:bxtoolselection}. Section \ref{subsec:architecturedesign} deals with the decisions taken for finalizing the application's architecture design. Section \ref{subsec:design_layers} describes the application's framework in detail along with its components. Finally, Section \ref{subsec:designchallenges} describes the challenges that I faced during the design and implementation of the entire framework. 
+In this chapter, I am going to describe the design and implementation steps realized for the demonstrator. Section \ref{subsec:exampleforimplementation} describes all the examples that I have conceptualized before choosing the final one for the implementation. This is then followed by the description steps taken in selecting the bx-tool in Section \ref{subsec:bxtoolselection}. Section \ref{subsec:architecturedesign} deals with the decisions taken for finalizing the application architecture design. Section \ref{subsec:design_layers} describes the application framework in detail along with its components. Finally, Section \ref{subsec:designchallenges} describes the challenges that I faced during the design and implementation of the entire framework. 
 
 My demonstrator is called \textit{\ac{Demon-BX}}. Demon-BX is designed in such a way that the implementation is extensible for a family of (similar) examples, and for more than one bx tool. Due to time limitations and scope of this thesis, I chose one of each for the implementation process.
 
