--- a/Final Documentation/Requirements/Requirements.tex
+++ b/Final Documentation/Requirements/Requirements.tex
@@ -8,7 +8,7 @@ As my thesis is more focused on the implementation of a demonstrator for consist
 
 \textbf{\textit{FR1}}: User should be able to manipulate models' instances
 
-Being a demonstrator for bx tool, a user must go through the entire process by himself/herself in order to try and learn bx concepts out of the demonstrator. During the process, the user should be able to play with the models' data i.e., Kitchen and Grid and manipulate them with the set of actions e.g., creation, deletion etc. defined separately in both the views i.e., Kitchen and Layout.
+Being a demonstrator for bx tool, a user must go through the entire process by himself/herself in order to try and learn bx concepts out of the demonstrator. During the process, the user should be able to play with the models' data, i.e., Kitchen and Grid and manipulate them with the set of actions defined separately in the corresponding views.
 
 \textbf{\textit{FR2}}: User should be able to trigger the synchronization process
 
@@ -16,7 +16,7 @@ Rather being automatic, the synchronization process should be triggered by the u
 
 \textbf{\textit{FR3}}: User can make changes only in one view before synchronization
 
-During the process of manipulation of models' data before the initiating the synchronization process, a user can make changes only in one view i.e., Kitchen or Layout but not in both. The synchronization process will be initiated only if one of the views contains changes otherwise, changes will be discarded and the user has to start the process once again from the previous consistent state.
+During the process of manipulation of models' data before the initiating the synchronization process, a user can make changes only in one view i.e., Kitchen or Layout but not in both. The synchronization process will be initiated only if one of the views contains changes, otherwise, changes will be discarded and the user has to start the process once again from the previous consistent state.
 
 \textbf{\textit{FR4}}: User can reset the models' states at any time
 
@@ -41,7 +41,7 @@ The user is going to try/use the demonstrator based on an example. This example 
 
 \textbf{\textit{NR4}}: User guidance
 
-During the entire time, while the user is using the demonstrator, it should be able to provide clear instructions/guidelines on what the user can do and try with it. The user should not feel like what to do with the demonstrator after a few minutes. Demonstrator should guide the user through all the aspects that are intended to be taught/learned with it.
+During the entire time, while the user is using the demonstrator, it should be able to provide clear instructions/guidelines on what the user can do and try with it. The user should not feel like what to do with the demonstrator after a few minutes. The demonstrator should guide the user through all the aspects that are intended to be taught/learned with it.
 
 \textbf{\textit{NR5}}: Informative
 
@@ -49,19 +49,19 @@ Rather, being just an online playing tool, the user should learn certain bx conc
 
 \textbf{\textit{NR6}}: Public access
 
-The demonstrator should be accessible worldwide to all. Being a demonstrator for a bx tool, its accessibility shouldn't be restricted to a few groups. Rather, it should be accessible to all whoever wants to use the tool.
+The demonstrator should be accessible worldwide to all. Being a demonstrator for a bx tool, its accessibility shouldn't be restricted to a few groups. Rather, it should be accessible to all, whoever wants to use the tool.
 
 \textbf{\textit{NR7}}: Robust
 
-The application should be platform independent i.e., it should run on any operating system and all kinds of browser. Different environment on user's machine should not affect the application.
+The application should be platform independent, i.e., it should run on any operating system and all kinds of browser. Different environment on the user's machine should not affect the application.
 
 \textbf{\textit{NR8}}: Minimal requirements on user's environment
 
-The application should occupy very less or no space on user's machine during installation or while running the example. 
+The application should occupy very less or no space on the user's machine during installation or while running the example. 
  
 \textbf{\textit{NR9}}: Easily deployable project
 
-Application's deployment process to get the example running should not be complex. Rather, it should involve simple steps so that it can be carried out by anyone in no time.
+The application's deployment process to get the example running should not be complex. Rather, it should involve simple steps so that it can be carried out by anyone in no time.
 
 \textbf{\textit{NR10}}: Extendable
 
