--- a/Final Documentation/Summary/Summary.tex
+++ b/Final Documentation/Summary/Summary.tex
@@ -6,8 +6,8 @@ With this thesis, I tried to solve the problem of a missing platform for teachin
 
 \begin{enumerate}
 	\item {\textit{Analysis and design of an application framework}: I have designed a working, fully functional application framework based on MVC pattern by extending the interface designed for accessing bx tools by Anjorin et al. \cite{benchmarx-reload} for implementing a bx tool demonstrator along with an interactive user interface. This framework can be used to implement a demonstrator encapsulating bx tools with concrete examples. Also, it is easy to add additional scenarios to teach bx related concepts, fairly easy to add different versions of the rules used, more or less easy to swap the bx tool, and fairly easy to implement a new example as long as it can work with the user interface.}
-    \item {\textit{Concrete implementation of the demonstrator}: After analyzing the existing work on bx and their related problems as described in Section \ref{sec:relatedwork}, I designed the requirements for my demonstrator to overcome these problems. Afterward, I have implemented a fully functional online demonstrator based on the application framework designed earlier and checked its feasibility and validity. My demonstrator i.e., Demon-BX satisfies all the requirements listed in Section \ref{sec:requirements} and hence overcomes the identified problems with the existing demonstrator platform for bx. This demonstrator is based on a bx tool i.e., eMoflon and a concrete example leveraging the functionalities of the bx tool and explaining some basic bx concepts.}
-    \item {\textit{Evaluation of the demonstrator}: After the implementation, I have evaluated the demonstrator based on the research method called Pretest-Posttest control group design~\cite{expandquasiexpdesign} to check its effectiveness and impact. This experiment was driven by three hypotheses and a few experimental variables i.e., dependent, independent, and controlled. A well-designed experiment was performed with two different groups of participants, data were collected and analyzed to measure the outcome. The results show that basic bx concepts are not well understood by the participants. However, it is challenging to teach bx concepts with a demonstrator but it might be possible to teach bx concepts with a demonstrator along with scenarios (guidance steps for the user) designed for all kinds of participants.}	
+    \item {\textit{Concrete implementation of the demonstrator}: After analyzing the existing work on bx and their related problems as described in Section \ref{sec:relatedwork}, I designed the requirements for my demonstrator to overcome these problems. Afterward, I have implemented a fully functional online demonstrator based on the application framework designed earlier and checked its feasibility and validity. My demonstrator i.e., Demon-BX satisfies all the requirements listed in Section \ref{sec:requirements} and hence overcomes the identified problems with the existing demonstrator platform for bx. This demonstrator is based on a bx tool, i.e., eMoflon and a concrete example, leveraging the functionalities of the bx tool and explaining some basic bx concepts.}
+    \item {\textit{Evaluation of the demonstrator}: After the implementation, I have evaluated the demonstrator based on the research method called Pretest-Posttest control group design~\cite{expandquasiexpdesign} to check its effectiveness and impact. This experiment was driven by three hypotheses and a few experimental variables, i.e., dependent, independent, and controlled. A well-designed experiment was performed with two different groups of participants, data were collected and analyzed to measure the outcome. The results show that basic bx concepts are not well understood by the participants. However, it is challenging to teach bx concepts with a demonstrator but it might be possible to teach bx concepts with a demonstrator along with scenarios (guidance steps for the user) designed for all kinds of participants.}	
 \end{enumerate}
 
 With the above contributions, I was able to build a web platform for a bx tool which is easily accessible to a widespread audience. My demonstrator helps to demonstrate the features of the bx tool, eMoflon along with a few bx concepts. A user can easily try my demonstrator in no time with a few mouse clicks and avoid the complex and time-consuming process which is required in the case of virtual machines, tutorials \& handbooks to get a bx tool running. 
@@ -20,7 +20,7 @@ With these findings, I was able to answer the following research questions with 
 		\textbf{Research Questions} & \textbf{Solutions}\\
 		\hline
 		\textbf{RQ1 -} What are the core requirements for implementing a successful bx demonstrator? &
-		From the work of my thesis, I feel that the most important requirements for implementing a successful bx demonstrator are the functional \& non-functional behaviors as described in Section \ref{sec:requirements}. For example that the user should able to initiate the synchronization process in both directions, the user should able to manipulate the models before synchronization, the example should be simple and fun to play with, the GUI should be interactive, zero setup time for the demonstrator, there is some interaction involved and perhaps decision making while playing with the example, the demonstrator should be accessible worldwide and platform independent, etc. \\
+		From the work of my thesis, I feel that the most important requirements for implementing a successful bx demonstrator are the functional \& non-functional behaviors as described in Section \ref{sec:requirements}. For example, that the user should able to initiate the synchronization process in both directions, the user should able to manipulate the models before synchronization, the example should be simple and fun to play with, the GUI should be interactive, zero setup time for the demonstrator, there is some interaction involved and perhaps decision making while playing with the example, the demonstrator should be accessible worldwide and platform independent, etc. \\
 		\hline
 		\textbf{RQ2 -} To what extent is such a bx demonstrator reusable? &
 		A few dimensions involved with the implementation of a bx demonstrator are (i) addition of different synchronization rules, (ii) visualization of different examples, and (iii) the ability to demonstrate the features of different bx tools. From the implementation work of my demonstrator, I can say that my application framework along with the extended interface for accessing the bx tools can be reused/extended to realize these dimensions. It is fairly easy to add different versions of the rules used, more or less easy to swap the bx tool, and fairly easy to implement a new example as long as it can work with the UI.\\
@@ -36,7 +36,7 @@ With these findings, I was able to answer the following research questions with 
 	\begin{tabular}{|p{5cm}|p{9.5cm}|}
 		\hline	
 		\textbf{RQ4 -} Does an interactive GUI helps a user to increase his/her understanding related to bx concepts? &
-		To teach bx related concepts through the demonstrator, I have carefully designed the corresponding scenarios by combining them with different parts of the implemented example and allowed the user to play with it in order to learn the concepts. However, this is indeed quite challenging. It is evident from the outcome of the hypotheses H$_{OP2}$ and H$_{OP3}$ (which corresponds to the research question \textbf{RQ4.1} and \textbf{RQ4.2} respectively) that without carefully designed scenarios there is no guarantee that the learning goals (\textbf{LG}s) are addressed and there might even be negative learning. With scenarios, the situation is a bit better but I was not able to conclude this with statistical significance.\\
+		To teach bx related concepts through the demonstrator, I have carefully designed the corresponding scenarios by combining them with different parts of the implemented example and allowed the user to play with it in order to learn the concepts. However, this is indeed quite challenging. It is evident from the outcome of the hypotheses H$_{OP2}$ and H$_{OP3}$ (which corresponds to the research question \textbf{RQ4.1} and \textbf{RQ4.2} respectively) that without carefully designed scenarios, there is no guarantee that the learning goals (\textbf{LG}s) are addressed and there might even be negative learning. With scenarios, the situation is a bit better, but I was not able to conclude this with statistical significance.\\
 		\hline			
 	\end{tabular}
 	\caption{Solutions to the Research Questions}
@@ -47,9 +47,9 @@ With these findings, I was able to answer the following research questions with 
 In this thesis, I have designed an application framework for the bx tool demonstrator, implemented the demonstrator based on a concrete example, and further evaluated the demonstrator to check its effectiveness in order to teach bx concepts to a widespread audience to the best of my knowledge and belief. However, a few other features that were out-of-scope for this thesis can be added to the current work. In the following paragraphs, I have discussed some enhancements that can be applied to my work in the future.
  
 \paragraph{New Rules}
-My current implementation of the eMoflon tool is based on two meta models and five transformation rules. However, it will be interesting to add a few more transformation rules for the existing meta-models. It will surely enhance the interactivity of the demonstrator and also test the capability of UI on handling new rules.
+My current implementation of the eMoflon tool is based on two meta-models and five transformation rules. However, it will be interesting to add a few more transformation rules to the existing meta-models. It will surely enhance the interactivity of the demonstrator and also test the capability of UI on handling new rules.
 
-\paragraph{New Examples} I have implemented one example i.e., \textit{Planning a Kitchen} in the demonstrator. However, it would be fascinating to see the implementation of a few more examples on the same or different UI platform but on the top of the same application framework. Some new examples will definitely test and verify the robustness of the application framework as well as the features of the eMoflon tool further.
+\paragraph{New Examples} I have implemented one example i.e., \textit{Planning a Kitchen} in the demonstrator. However, it would be fascinating to see the implementation of a few more examples on the same or different UI platform built on the top of the same application framework. Some new examples will definitely test and verify the robustness of the application framework as well as the features of the eMoflon tool further.
 
 \paragraph{Another BX Tool}
 Demon-BX is implemented encapsulating the features of the bx tool \texttt{eMoflon}. However, to test the extensibility of the application framework and the interface built for communicating with bx tools, implementation of another bx tool can be researched and added to the current work.
